# open-brski

./: .gitignore  Cargo.toml  Config.toml  LICENSE.md  README.md
crates/brski-prm-artifacts/: Cargo.toml
crates/brski-prm-artifacts/src/: content_type.rs  error.rs  jws.rs  lib.rs  token_type.rs
crates/brski-prm-artifacts/src/cacerts/: mod.rs  response.rs  response_payload.rs
crates/brski-prm-artifacts/src/issued_voucher/: mod.rs
crates/brski-prm-artifacts/src/jws/: decoded_jws.rs  jws.rs  mod.rs
crates/brski-prm-artifacts/src/per/: mod.rs  response.rs  response_payload.rs  trigger.rs
crates/brski-prm-artifacts/src/pvr/: response.rs  trigger.rs
crates/brski-prm-artifacts/src/rer/: response.rs
crates/brski-prm-artifacts/src/rvr/: mod.rs
crates/brski-prm-artifacts/src/status/: mod.rs
crates/brski-prm-artifacts/src/status/enroll/: response.rs  status.rs
crates/brski-prm-artifacts/src/status/pledge/: request.rs  response.rs  status.rs
crates/brski-prm-artifacts/src/status/voucher/: response.rs  status.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  config.rs  layering.rs  masa_config.rs  pledge_config.rs  registrar_agent_config.rs  registrar_config.rs  util.rs
crates/common/: Cargo.toml
crates/common/src/: defaults.rs  lib.rs  server_error.rs  util.rs
crates/crates/brski-prm-artifacts/: Cargo.toml
crates/crates/brski-prm-artifacts/src/: error.rs
crates/crates/brski-prm-artifacts/src/cacerts/: response.rs  response_payload.rs
crates/crates/brski-prm-artifacts/src/per/: response.rs  response_payload.rs
crates/crates/brski-prm-artifacts/src/pledge_info/: mod.rs
crates/crates/brski-prm-artifacts/src/pvr/: mod.rs  trigger.rs
crates/crates/brski-prm-artifacts/src/rer/: response.rs
crates/crates/brski-prm-artifacts/src/rvr/: response.rs
crates/crates/brski-prm-artifacts/src/status/enroll/: status.rs
crates/crates/brski-prm-artifacts/src/status/pledge/: response.rs
crates/crates/brski-prm-artifacts/src/status/voucher/: response.rs  status.rs
crates/crates/flutter_bridge/: .gitignore  Cargo.toml  cargokit.yaml
crates/crates/flutter_bridge/src/api/: config.rs  ffiblecommunicator.rs
crates/crates/masa/: Cargo.toml
crates/crates/masa/src/server/handlers/: requestvoucher.rs
crates/crates/registrar/: .well-known  Cargo.toml
crates/crates/registrar-agent/: Cargo.toml
crates/crates/registrar-agent/src/: lib.rs  parsed_config.rs
crates/crates/registrar-agent/src/client/: discover_pledges.rs  forward_enroll_status.rs  forward_per.rs  forward_voucher.rs  get_wrappedcacerts.rs  mod.rs  trigger_per.rs  trigger_pvr.rs
crates/crates/registrar-agent/src/pledge_communicator/: http_communicator.rs  mod.rs
crates/crates/registrar-agent/src/server/: mod.rs  server.rs
crates/crates/registrar/src/: lib.rs  sign_cert.rs
crates/crates/registrar/src/client/: client.rs  mod.rs
crates/crates/registrar/src/server/: mod.rs
crates/crates/signeable-payload/: Cargo.toml
crates/crates/signeable-payload/src/: error.rs  lib.rs
crates/crates/signeable-payload/src/algorithm/: mod.rs
crates/crates/signeable-payload/src/cose/: alg.rs
crates/crates/signeable-payload/src/jws/: alg.rs  header.rs
crates/crates/signeable-payload/src/signeable/: mod.rs  raw_signed.rs  signeable.rs  signed.rs  signing_context.rs  unsigned.rs  verified.rs  verifyable.rs
crates/edulock/: Cargo.toml
crates/edulock/src/: main.rs
crates/flutter_bridge/: Cargo.toml
crates/flutter_bridge/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
crates/flutter_bridge/src/api/: bootstrapper.rs  config.rs  ffiblecommunicator.rs  identifiers.rs  init.rs  mod.rs
crates/ietf-voucher/: Cargo.toml
crates/ietf-voucher/src/: agent_signed_data.rs  artifact.rs  assertion.rs  cms.rs  cms_signed_request.rs  cms_signed_voucher.rs  error.rs  lib.rs  request_artifact.rs  target.rs  verified.rs
crates/ietf-voucher/src/util/pki/: mod.rs
crates/masa/: .well-known  Cargo.toml
crates/masa/src/: lib.rs  parsed_config.rs
crates/masa/src/server/: server.rs
crates/masa/src/server/handlers/: mod.rs  requestvoucher.rs
crates/open-brski/: Cargo.toml
crates/pledge/: Cargo.toml
crates/pledge-lib/: Cargo.toml
crates/pledge-lib/src/: csr.rs  lib.rs  qps.rs  tper.rs  tpvr.rs
crates/pledge/src/: lib.rs  parsed_config.rs  server.rs
crates/pledge/src/handlers/: mod.rs  pi.rs  qps.rs  scac.rs  ser.rs  svr.rs  tper.rs  tpvr.rs
crates/pledge/src/util/: get_test_app.rs  mod.rs
crates/registrar/: Cargo.toml
crates/registrar-agent/: .well-known  Cargo.toml
crates/registrar-agent/src/: lib.rs  parsed_config.rs
crates/registrar-agent/src/client/: discover_pledges.rs  forward_cacerts.rs  forward_enroll_response.rs  forward_enroll_status.rs  forward_per.rs  forward_pvr.rs  forward_voucher.rs  forward_voucher_status.rs  get_wrappedcacerts.rs  mod.rs  request_pledge_info.rs  trigger_per.rs  trigger_pvr.rs
crates/registrar-agent/src/pledge_communicator/: http_communicator.rs  mod.rs
crates/registrar-agent/src/server/: mod.rs  server.rs
crates/registrar-agent/src/server/handlers/: init.rs  mod.rs
crates/registrar/src/: lib.rs  parsed_config.rs  sign_cert.rs
crates/registrar/src/client/: client.rs  mod.rs
crates/registrar/src/server/: server.rs
crates/registrar/src/server/handlers/: enrollstatus.rs  mod.rs  requestenroll.rs  requestvoucher.rs  voucher_status.rs  wrappedcacerts.rs
esp32/: Cargo.toml  diagram.json  espflash.toml  export-esp.sh  partitions.csv  sdkconfig.defaults  wokwi.toml
esp32/.cargo/: config.toml
esp32/data/: pledge.der  pledge.pm  private_key.der
esp32/src/: ble_async.rs  ble_request.rs  ble_response.rs  ble_router.rs  main.rs  tpvr.rs  wifi_async.rs
esp32/src/biscuit/: errors.rs  jwa.rs  jwe.rs  jwk.rs  jws.rs  mod.rs
esp32/src/biscuit/jws/: compact.rs  flattened.rs  general.rs  signeable.rs  util.rs
esp32/src/biscuit/serde_custom/: base64_url_uint.rs  byte_sequence.rs  option_base64_url_uint.rs  option_byte_sequence.rs
esp32/src/routes/: dif.rs  mod.rs  pi.rs  qps.rs  scac.rs  ser.rs  svr.rs  tper.rs  tpvr.rs
(+109 files in other folders)
