[package]
name = "ietf-voucher"
version.workspace = true
edition.workspace = true
license = "MIT"
keywords = ["voucher", "rfc8366", "brski", "brski-prm", "voucher-artifact", "ietf-voucher", "authentication"]
categories = ["authentication"]
homepage = ""
repository = ""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["chrono/now", "openssl", "json"]
json = ["serde_json", "josekit"]
clock = ["chrono/now"]
openssl = ["dep:openssl"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
openssl = {version = "0.10.64", optional = true}
openssl-sys = "0.9.102"

chrono = { version = "0.4.37", features = ["serde", "now"] }
readonly = "0.2.12"
serde_json = { version = "1.0.115", optional = true }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
serde_with = { version = "3.8.1", features = ["base64"] }
josekit = { version = "0.8.6", optional = true}

[dev-dependencies]
example-certs = { path = "../example-certs", features = ["openssl"] }
