[package]
name = "ietf-voucher"
version.workspace = true
edition.workspace = true
license = "MIT"
keywords = ["voucher", "rfc8366", "brski", "brski-prm", "voucher-artifact", "ietf-voucher", "authentication"]
categories = ["authentication"]
homepage = ""
repository = ""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json = ["dep:serde_json"]
clock = ["chrono/now"]
openssl = ["dep:openssl"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
openssl = {version = "0.10.64", optional = true, features = ["vendored"]}

chrono = { version = "0.4.37", features = ["serde", "now"] }
readonly = "0.2.12"
serde_json = { version = "1.0.115", optional = true }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
serde_with = { version = "3.8.1", features = ["base64"] }
base64 = "0.22.1"
signeable-payload.workspace = true

[dev-dependencies]
example-certs = { path = "../example-certs" }
