[package]
name = "pledge"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["example-certs/openssl"]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true 
serde_bytes.workspace = true
common.workspace = true
brski-prm-artifacts.workspace = true 
chrono.workspace = true
openssl.workspace = true
openssl-sys.workspace = true
cli.workspace = true
axum.workspace = true
tracing.workspace = true
tower-http.workspace = true
rand = "0.8.5"
tower = "0.4.13"

[dev-dependencies]
example-certs.workspace = true
serde_json = "1.0.117"

