[package]
name = "registrar"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
cli.workspace = true
openssl.workspace = true
josekit.workspace = true
brski-prm-artifacts.workspace = true 
axum.workspace = true
chrono.workspace = true
tracing.workspace = true
tower-http.workspace = true
serde_json = "1.0.120"
