[package]
name = "masa"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
openssl = ["dep:openssl"]

[dependencies]
common.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
cli.workspace = true
brski-prm-artifacts.workspace = true 
tracing.workspace = true
chrono.workspace = true
axum.workspace = true
tower-http.workspace = true
signeable-payload.workspace = true
openssl = {workspace = true, optional = true }